--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h1>Tecnologías de la Información 2024</h1>
   </header>
   <nav>
-    <a href="CodigoGitHub.html"><strong>Inicio</strong></a>
+    <a href="index.html"><strong>Inicio</strong></a>
     <a href="#orden"><strong>Orden de Clases</strong></a>
     <a href="#notas"><strong>Notas</strong></a>
   </nav>
