--- a/OrdenDeClases.html
+++ b/OrdenDeClases.html
@@ -45,8 +45,8 @@
     <h1>Tecnologías de la Información 2024</h1>
   </header>
   <nav>
-    <a href="CodigoGitHub.html"><strong>Inicio</strong></a>
-    <a href="#orden"><strong>Orden de Clases</strong></a>
+    <a href="index.html"><strong>Inicio</strong></a>
+    <a href="OrdenDeClases.html"><strong>Orden de Clases</strong></a>
     <a href="#notas"><strong>Notas</strong></a>
   </nav>
   <div class="Orden de Clases">
