--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </header>
   <nav>
     <a href="index.html"><strong>Inicio</strong></a>
-    <a href="#orden"><strong>Orden de Clases</strong></a>
+    <a href="OrdenDeClase.html"><strong>Orden de Clases</strong></a>
     <a href="#notas"><strong>Notas</strong></a>
   </nav>
   <div class="container">
