--- a/OrdenDeClases.html
+++ b/OrdenDeClases.html
@@ -49,7 +49,7 @@
     <a href="OrdenDeClases.html"><strong>Orden de Clases</strong></a>
     <a href="#notas"><strong>Notas</strong></a>
   </nav>
-  <div class="Orden de Clases">
+  <div class="container">
     <section id="Excel">
       <h2>Clases</h2>
       <p>Aqui veran que corresponde a cada semana de clase.</p>
