--- a/OrdenDeClases.html
+++ b/OrdenDeClases.html
@@ -47,7 +47,7 @@
   <nav>
     <a href="index.html"><strong>Inicio</strong></a>
     <a href="OrdenDeClases.html"><strong>Orden de Clases</strong></a>
-    <a href="#notas"><strong>Notas</strong></a>
+    <a href="https://drive.google.com/drive/folders/1kX_2CcsC8erqTn_jYFHGlGNc0UXt0ZbC?usp=drive_link"><strong>Notas</strong></a>
   </nav>
   <div class="container">
     <section id="Excel">
