--- a/index.html
+++ b/index.html
@@ -59,5 +59,11 @@
       <p>La materia consistira de clases de fundamentos de la programacion. Algoritmos, estructuras secuenciales, condicionales o repetitivas, conceptos de variables y constantes, entre otras cosas.</p>
     </section>
   </div>
+  <form action="https://github.com/TU_USUARIO/TU_REPOSITORIO/issues/new" method="post" enctype="multipart/form-data">
+        <label for="fileInput">Selecciona tu archivo:</label>
+        <input type="file" id="fileInput" name="files[]" multiple>
+        <br>
+        <input type="submit" value="Subir Trabajo">
+    </form>
 </body>
 </html>
