--- a/index.html
+++ b/index.html
@@ -59,11 +59,6 @@
       <p>La materia consistira de clases de fundamentos de la programacion. Algoritmos, estructuras secuenciales, condicionales o repetitivas, conceptos de variables y constantes, entre otras cosas.</p>
     </section>
   </div>
-  <form action="https://github.com/MarianoDiaz00/4toCalasanz.github.io/issues/new" method="post" enctype="multipart/form-data">
-        <label for="fileInput">Selecciona tu archivo:</label>
-        <input type="file" id="fileInput" name="files[]" multiple>
-        <br>
-        <input type="submit" value="Subir Trabajo">
-    </form>
+  <a href="https://github.com/MarianoDiaz00/4toCalasanz.github.io/blob/main/logocala.png" download> Descargar Archivo</a>
 </body>
 </html>
