--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
       <p>La materia consistira de clases de fundamentos de la programacion. Algoritmos, estructuras secuenciales, condicionales o repetitivas, conceptos de variables y constantes, entre otras cosas.</p>
     </section>
   </div>
-  <a href="logocala.png" download> Descargar Archivo</a>
+  <a href="logocala.png"> Descargar Archivo</a>
 </body>
 </html>
