--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
   </nav>
   <div class="container">
     <section id="presentacion">
+      //Container de la pagina principal;
       <h2>¡Bienvenidos!</h2>
       <p>Esta es la pagina principal que se usara en la materia para los alumnos de 4to año. Aquí encontrarán las diapositivas de las clases, sus notas, sus tareas y guias de ejercicios. </p>
-      <p>La materia consistira de clases de fundamentos de la programacion. Algoritmos, estructuras secuenciales, condicionales o repetitivas, conceptos de variables y constantes, entre otras cosas.</p>
+      <p>Haciendo click en las opciones del menu superior podran acceder a distitnos </p>
     </section>
   </div>
-  <a href="logocala.png"> Descargar Archivo</a>
+  <a href="LOGOUNICOBLANCO-01.rar" download=""></a> Descargar Archivo</a>
 </body>
 </html>
