--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
       <p>Haciendo click en las opciones del menu superior podran acceder a distitnos </p>
     </section>
   </div>
-  <a href="LOGOUNICOBLANCO-01.rar" download=""></a> Descargar Archivo</a>
+  <a href="https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/LOGOUNICOBLANCO-01.rar">Descargar archivo</a>
 </body>
 </html>
