--- a/OrdenDeClases.html
+++ b/OrdenDeClases.html
@@ -57,7 +57,7 @@
   <nav>
     <a href="index.html"><strong>Inicio</strong></a>
     <a href="OrdenDeClases.html"><strong>Orden de Clases</strong></a>
-    <a href="Notas.html"><strong>Notas</strong></a>
+    <a href="Notas.html"><strong>Descargas</strong></a>
   </nav>
   <h2>Plan de Clases - Tecnologías de la Información 2024</h2>
 
