--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
   <nav>
     <a href="index.html"><strong>Inicio</strong></a>
     <a href="OrdenDeClases.html"><strong>Orden de Clases</strong></a>
-    <a href="Notas.html"><strong>Notas</strong></a>
+    <a href="Notas.html"><strong>Descargas</strong></a>
   </nav>
   <div class="container">
+    <!--Esto contiene informacion que va en el el centro de la pagina-->
     <section id="presentacion">
-      //Container de la pagina principal;
       <h2>¡Bienvenidos!</h2>
       <p>Esta es la pagina principal que se usara en la materia para los alumnos de 4to año. Aquí encontrarán las diapositivas de las clases, sus notas, sus tareas y guias de ejercicios. </p>
       <p>Haciendo click en las opciones del menu superior podran acceder a distitnos </p>
