--- a/Notas.html
+++ b/Notas.html
@@ -36,6 +36,11 @@
     nav a:hover {
       background-color: #7d25298a;
     }
+    .container {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 0 20px;
+    }
     
   </style>
 </head>
@@ -46,8 +51,16 @@
   <nav>
     <a href="index.html"><strong>Inicio</strong></a>
     <a href="OrdenDeClases.html"><strong>Orden de Clases</strong></a>
-    <a href="Notas.html"><strong>Notas</strong></a>
+    <a href="Notas.html"><strong>Descargas</strong></a>
   </nav>
- 
+  <div class="container">
+    <!--Esto contiene informacion que va en el el centro de la pagina-->
+    <section id="Seccion Descargas">
+      <h2>Aca encontraran los archivos principales</h2>
+      <p>Esta es la pagina principal que se usara en la materia para los alumnos de 4to año. Aquí encontrarán las diapositivas de las clases, sus notas, sus tareas y guias de ejercicios. </p>
+      <p>Haciendo click en las opciones del menu superior podran acceder a distitnos </p>
+    </section>
+  </div>
+  <a href="https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/LOGOUNICOBLANCO-01.rar">Descargar archivo</a>
 </body>
 </html>
