--- a/Notas.html
+++ b/Notas.html
@@ -56,11 +56,12 @@
   <div class="container">
     <!--Esto contiene informacion que va en el el centro de la pagina-->
     <section id="Seccion Descargas">
-      <h2>Aca encontraran los archivos principales</h2>
-      <p>Esta es la pagina principal que se usara en la materia para los alumnos de 4to año. Aquí encontrarán las diapositivas de las clases, sus notas, sus tareas y guias de ejercicios. </p>
-      <p>Haciendo click en las opciones del menu superior podran acceder a distitnos </p>
+      <h2>DESCARGAS</h2>
+      <p>En esta seccion encontraran distintos archivos necesarios</p>
+      <p> </p>
     </section>
   </div>
-  <a href="https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/LOGOUNICOBLANCO-01.rar">Descargar archivo</a>
+  <p><strong> GUIA DE EJERCICIOS </strong></p>
+  <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/LOGOUNICOBLANCO-01.rar'">Descargar</button>
 </body>
 </html>
