--- a/descargas.html
+++ b/descargas.html
@@ -61,8 +61,13 @@
       <p> </p>
     </section>
   </div>
-  <p><strong> GUIA DE EJERCICIOS </strong></p>
-  <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/LOGOUNICOBLANCO-01.rar'">Descargar</button>
+  <p><strong> GUIAS DE EJERCICIOS </strong></p>
+  <p>Guias 1,2 y 3</p>
+  <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/Guía de ejercicios.pdf'">Descargar</button>
   
+
+  <p><strong>PROGRAMA</strong></p>
+  <p>Programa de la materia</p>
+
 </body>
 </html>
