--- a/OrdenDeClases.html
+++ b/OrdenDeClases.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tecnologías de la Información 2024</title>
+  <title>Tecnologías de la Información 2024 - Plan de Clases</title>
   <style>
 
     body {
@@ -36,13 +36,12 @@
     table {
       width: 100%;
       border-collapse: collapse;
+      background-color: #333333;
+      color: #ffffff;
     }
     th, td {
-      padding: 8px;
-      text-align: center;
-      color: #ffffff;
-      background-color: #000000;
-      border-bottom: 1px solid #ffffff;
+      padding: 10px;
+      border: 1px solid #ffffff;
     }
     th {
       background-color: #000000;
