--- a/descargas.html
+++ b/descargas.html
@@ -98,12 +98,18 @@
     <hr>
     
     <p><strong>PROGRAMA</strong></p>
-    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/logocala.png'">No disponible</button>
+    <button disabled onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/logocala.png'">No disponible</button>
 
     <hr>
 
     <p><strong>DIAPOSITIVAS</strong></p>
-    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/logocala.png'">No disponible</button>
+    <button disabled onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/logocala.png'">No disponible</button>
+
+    <hr>
+
+    <p><strong>Si hago click aca apruebo la materia</strong></p>
+    <button onclick="window.location.href= 'https://www.youtube.com/watch?v=xvFZjo5PgG0'">APROBAR</button>
+
 
   </div>
 </body>
