--- a/descargas.html
+++ b/descargas.html
@@ -107,8 +107,8 @@
 
     <hr>
 
-    <p><strong>Si hago click aca apruebo la materia</strong></p>
-    <button onclick="window.location.href= 'https://www.youtube.com/watch?v=xvFZjo5PgG0'">APROBAR</button>
+    <!--<p><strong>Si hago click aca apruebo la materia</strong></p>
+    <button onclick="window.location.href= 'https://www.youtube.com/watch?v=xvFZjo5PgG0'">APROBAR</button>-->
 
 
   </div>
