--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       <p>Esta es la página principal que se usará en la materia para los alumnos de 4to año. Aquí encontrarán información importante sobre el curso.</p>
       <p>Esta página es exclusiva para los alumnos. Podrán utilizarla para subir tareas, descargar material para las clases y acceder a presentaciones realizadas por el docente.</p>
       <p>Cualquier duda será respondida únicamente en clase. Los alumnos deberán realizar los ejercicios en las computadoras del laboratorio de informática o en papel durante las clases.</p>
-      <p>En la sección "Orden de Clases" encontrarán la distribución de los temas y lo que se abordará en cada clase.</p>
-      <p>En la sección de "Descargas" encontrarán guías de ejercicios, el programa de la materia, diapositivas utilizadas en clase y otros materiales de lectura necesarios.</p>
+      <p>En la sección <strong>Orden de Clases</strong> encontrarán la distribución de los temas y lo que se abordará en cada clase.</p>
+      <p>En la sección de <strong>Descargas</strong> encontrarán guías de ejercicios, el programa de la materia, diapositivas utilizadas en clase y otros materiales de lectura necesarios.</p>
     </div>
   </div>
 </body>
