Tablas de Operadores

--- a/descargas.html
+++ b/descargas.html
@@ -107,15 +107,11 @@
 
     <hr>
 
-    <p><strong>Si hago click aca apruebo la materia</strong></p>
-    <button onclick="window.location.href= 'https://www.youtube.com/watch?v=xvFZjo5PgG0'">APROBAR</button>-->
+    <p><strong>TABLA DE OPERADORES LOGICOS</strong></p>
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/TablaOperadores.png'">Abrir</button>
 
     <hr>
-
-    <p><strong>Consigna TP1 4C-H</strong></p>
-    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/Trabajo Practico 1 - Tecnologia.pdf'">CONSIGNA</button>-->
-
-
+  
   </div>
 </body>
 </html>
