--- a/descargas.html
+++ b/descargas.html
@@ -98,12 +98,12 @@
     <hr>
     
     <p><strong>PROGRAMA</strong></p>
-    <button disabled onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/logocala.png'">No disponible</button>
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/programa tecnologia.docx.pdf'">Abrir</button>
 
     <hr>
 
-    <p><strong>DIAPOSITIVAS</strong></p>
-    <button disabled onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/logocala.png'">No disponible</button>
+    <p><strong>TRABAJOS PRACTICOS</strong></p>
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/logocala.png'">No disponible</button>
 
     <hr>
 
