--- a/descargas.html
+++ b/descargas.html
@@ -89,7 +89,7 @@
   <div class="container">
     <section>
       <h2>DESCARGAS</h2>
-      <p>En esta sección encontrarán distintos archivos necesarios para la materia.</p>
+      <p>En esta sección encontrarán distintos archivos y links necesarios para la materia.</p>
     </section>
     
     <p><strong>GUIAS DE EJERCICIOS</strong></p>
@@ -103,7 +103,7 @@
     <hr>
 
     <p><strong>TRABAJOS PRACTICOS</strong></p>
-    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/logocala.png'">No disponible</button>
+    <button onclick="window.location.href= 'https://drive.google.com/drive/folders/1svUSa9X61LjBCZvVsIS6CfKTDi09J7cD?usp=drive_link'">Link</button>
 
     <hr>
 
