--- a/descargas.html
+++ b/descargas.html
@@ -103,7 +103,9 @@
     <hr>
 
     <p><strong>TRABAJOS PRACTICOS</strong></p>
-    <button onclick="window.location.href= 'https://drive.google.com/drive/folders/1svUSa9X61LjBCZvVsIS6CfKTDi09J7cD?usp=drive_link'">Link</button>
+    <button onclick="window.location.href= 'https://drive.google.com/drive/folders/1svUSa9X61LjBCZvVsIS6CfKTDi09J7cD?usp=drive_link'">Drive</button>
+  
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/Trabajo Práctico 1.pdf'">Abrir</button>
 
     <hr>
 
