--- a/descargas.html
+++ b/descargas.html
@@ -113,6 +113,11 @@
     <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/TablaOperadores.png'">Abrir</button>
 
     <hr>
+
+    <p><strong>SOLUCION AL TRABAJO PRACTICO</strong></p>
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/fakesolucion.jpg'">Abrir</button>
+
+    <hr>
   
   </div>
 </body>
