--- a/descargas.html
+++ b/descargas.html
@@ -114,10 +114,10 @@
 
     <hr>
 
-    <p><strong>SOLUCION AL TRABAJO PRACTICO</strong></p>
-    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/fakesolucion.jpg'">Abrir</button>
+    <!-- <p><strong>SOLUCION AL TRABAJO PRACTICO</strong></p> -->
+    <!--<button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/fakesolucion.jpg'">Abrir</button>-->
 
-    <hr>
+   <!-- <hr> -->
   
   </div>
 </body>
