--- a/descargas.html
+++ b/descargas.html
@@ -118,6 +118,13 @@
     <!--<button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/fakesolucion.jpg'">Abrir</button>-->
 
    <!-- <hr> -->
+
+    <hr>
+
+    <p><strong>Apunte de Python</strong></p>
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/Fundamentos de Python.pdf'">Abrir</button>
+
+    <hr>
   
   </div>
 </body>
