--- a/OrdenDeClases.html
+++ b/OrdenDeClases.html
@@ -60,6 +60,20 @@
   </nav>
   <h2>Plan de Clases - Tecnologías de la Información 2024</h2>
 
+  <hr>
+
+    <p><strong>TRABAJOS PRACTICOS</strong></p>
+    <button onclick="window.location.href= 'https://drive.google.com/drive/folders/1svUSa9X61LjBCZvVsIS6CfKTDi09J7cD?usp=drive_link'">Drive</button>
+  
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/Trabajo Práctico 1.pdf'">Abrir</button>
+
+    <hr>
+
+    <p><strong>TABLA DE OPERADORES LOGICOS</strong></p>
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/TablaOperadores.png'">Abrir</button>
+
+    <<hr>
+
 </body>
 </html>
     
