Cambios de formato

--- a/OrdenDeClases.html
+++ b/OrdenDeClases.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tecnologías de la Información 2024 - Plan de Clases</title>
+  <title>Tecnologías de la Información 2024 - Links de Interes</title>
   <style>
 
     body {
@@ -12,7 +12,7 @@
       color: rgb(255, 255, 255);
       margin: 0;
       padding: 0;
-      background-color: #7d252a;
+      background-color: #7c0303;
     }
     header {
       background-color: #7d252a;
@@ -31,7 +31,7 @@
       padding: 10px 20px;
     }
     nav a:hover {
-      background-color: #7d25298a;
+      background-color: rgba(245, 90, 7, 0.54);
     }
     table {
       width: 100%;
@@ -63,6 +63,7 @@
   <hr>
 
     <p><strong>TRABAJOS PRACTICOS</strong></p>
+
     <button onclick="window.location.href= 'https://drive.google.com/drive/folders/1svUSa9X61LjBCZvVsIS6CfKTDi09J7cD?usp=drive_link'">Drive</button>
   
     <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/Trabajo Práctico 1.pdf'">Abrir</button>
@@ -72,11 +73,8 @@
     <p><strong>TABLA DE OPERADORES LOGICOS</strong></p>
     <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/TablaOperadores.png'">Abrir</button>
 
-    <<hr>
+  <hr>
 
 </body>
 </html>
-    
-  </div>
-</body>
-</html>
+
