--- a/descargas.html
+++ b/descargas.html
@@ -83,7 +83,7 @@
   </header>
   <nav>
     <a href="index.html"><strong>Inicio</strong></a>
-    <a href="OrdenDeClases.html"><strong>Orden de Clases</strong></a>
+    <a href="OrdenDeClases.html"><strong>Links de Interés</strong></a>
     <a href="descargas.html"><strong>Descargas</strong></a>
   </nav>
   <div class="container">
@@ -99,25 +99,6 @@
     
     <p><strong>PROGRAMA</strong></p>
     <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/programa tecnologia.docx.pdf'">Abrir</button>
-
-    <hr>
-
-    <p><strong>TRABAJOS PRACTICOS</strong></p>
-    <button onclick="window.location.href= 'https://drive.google.com/drive/folders/1svUSa9X61LjBCZvVsIS6CfKTDi09J7cD?usp=drive_link'">Drive</button>
-  
-    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/Trabajo Práctico 1.pdf'">Abrir</button>
-
-    <hr>
-
-    <p><strong>TABLA DE OPERADORES LOGICOS</strong></p>
-    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/TablaOperadores.png'">Abrir</button>
-
-    <!--<hr>-->
-
-    <!-- <p><strong>SOLUCION AL TRABAJO PRACTICO</strong></p> -->
-    <!--<button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/fakesolucion.jpg'">Abrir</button>-->
-
-   <!-- <hr> -->
 
     <hr>
 
