Cambios a la estetica

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       padding: 0;
       background: url('logocala.png');
       background-size:auto;
-      background-color: #000000;
+     
     }
     header {
       background-color: #7d252a;
@@ -64,7 +64,7 @@
   </header>
   <nav>
     <a href="index.html"><strong>Inicio</strong></a>
-    <a href="OrdenDeClases.html"><strong>Orden de Clases</strong></a>
+    <a href="OrdenDeClases.html"><strong>Apuntes</strong></a>
     <a href="descargas.html"><strong>Descargas</strong></a>
   </nav>
   <div class="container">
@@ -73,8 +73,8 @@
       <p>Esta es la página principal que se usará en la materia para los alumnos de 4to año. Aquí encontrarán información importante sobre el curso.</p>
       <p>Esta página es exclusiva para los alumnos. Podrán utilizarla para subir tareas, descargar material para las clases y acceder a presentaciones realizadas por el docente.</p>
       <p>Cualquier duda será respondida únicamente en clase. Los alumnos deberán realizar los ejercicios en las computadoras del laboratorio de informática o en papel durante las clases.</p>
-      <p>En la sección <strong>Orden de Clases</strong> encontrarán la distribución de los temas y lo que se abordará en cada clase.</p>
-      <p>En la sección de <strong>Descargas</strong> encontrarán guías de ejercicios, el programa de la materia, diapositivas utilizadas en clase y otros materiales de lectura necesarios.</p>
+      <p>En la sección <strong>Apuntes</strong> encontrarán el drive de la materia y otros materiales de lectura necesarios.</p>
+      <p>En la sección de <strong>Descargas</strong> encontrarán guías de ejercicios, el programa de la materia, diapositivas utilizadas en clase.</p>
     </div>
   </div>
 </body>
