--- a/OrdenDeClases.html
+++ b/OrdenDeClases.html
@@ -12,7 +12,7 @@
       color: rgb(255, 255, 255);
       margin: 0;
       padding: 0;
-      background-color: #7c0303;
+      background: url('logocala.png');
     }
     header {
       background-color: #7d252a;
@@ -44,7 +44,25 @@
       border: 1px solid #ffffff;
     }
     th {
-      background-color: #000000;
+      background-color: #0b19df;
+    }
+    .container{
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px; /* Añade espacio alrededor del contenedor */
+      background-color: #ee650a; /* Color de fondo para el contenedor */
+      border-radius: 10px; /* Añade esquinas redondeadas al contenedor */
+    }
+    p strong {
+      background-color: #c415158c;
+      padding: 5px 10px;
+      border-radius: 5px;
+    }
+    h2 {
+      color: #ffffff;
+      background-color: #7d252a;
+      padding: 5px 10px;
+      border-radius: 5px;
     }
 
   </style>
@@ -55,12 +73,11 @@
   </header>
   <nav>
     <a href="index.html"><strong>Inicio</strong></a>
-    <a href="OrdenDeClases.html"><strong>Orden de Clases</strong></a>
+    <a href="OrdenDeClases.html"><strong>Apuntes</strong></a>
     <a href="descargas.html"><strong>Descargas</strong></a>
   </nav>
-  <h2>Plan de Clases - Tecnologías de la Información 2024</h2>
-
-  <hr>
+  <div class="container">
+    <h2>Apuntes</h2>
 
     <p><strong>TRABAJOS PRACTICOS</strong></p>
 
@@ -74,6 +91,12 @@
     <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/TablaOperadores.png'">Abrir</button>
 
   <hr>
+
+    <p><strong>APUNTE DE PYTHON</strong></p>
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/Fundamentos de Python.pdf'">Abrir</button>
+
+  </div>
+  
 
 </body>
 </html>
