--- a/OrdenDeClases.html
+++ b/OrdenDeClases.html
@@ -79,11 +79,9 @@
   <div class="container">
     <h2>Apuntes</h2>
 
-    <p><strong>TRABAJOS PRACTICOS</strong></p>
+    <p><strong>Drive de la materia</strong></p>
 
-    <button onclick="window.location.href= 'https://drive.google.com/drive/folders/1svUSa9X61LjBCZvVsIS6CfKTDi09J7cD?usp=drive_link'">Drive</button>
-  
-    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/Trabajo Práctico 1.pdf'">Abrir</button>
+    <button onclick="window.location.href= 'https://drive.google.com/drive/folders/1svUSa9X61LjBCZvVsIS6CfKTDi09J7cD?usp=drive_link'">Abrir</button>
 
     <hr>
 
