--- a/descargas.html
+++ b/descargas.html
@@ -100,7 +100,11 @@
     
     <p><strong>PROGRAMA</strong></p>
     <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/programa tecnologia.docx.pdf'">Abrir</button>
-  
+
+    <hr>
+    
+    <p><strong>EJERCICIOS DICIEMBRE</strong></p>
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/ejercicios lista, tuplas, diccionarios.pdf'">Abrir</button>
   </div>
 </body>
 </html>
