--- a/descargas.html
+++ b/descargas.html
@@ -104,7 +104,7 @@
     <hr>
     
     <p><strong>EJERCICIOS DICIEMBRE</strong></p>
-    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/ejercicios lista, tuplas, diccionarios.pdf'">Abrir</button>
+    <button onclick="window.location.href= 'https://github.com/MarianoDiaz00/4toCalasanz.github.io/raw/main/Ejercicios lista, tuplas, diccionarios.pdf'">Abrir</button>
   </div>
 </body>
 </html>
