Actualizacion de bienvenida
boca

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </header>
 
     <section id="inicio">
-        <h2>Bienvenidos al curso</h2>
-        <p>Este curso de <b>Tecnologías de la Información</b> está diseñado para introducir a los estudiantes en la programación con Python.</p>
+        <h2>Bienvenidos</h2>
+        <p>La materia <b>Tecnologías de la Información</b> esta pensada y diseñada para brindarles a los alumnos una introducción al mundo de la programación y la lógica computacional. En este espacio aprenderemos los conceptos básicos de la programación utilizando el Python, uno de los más populares en la actualidad. Espero que disfruten el transcurso de la materia!.</p>
     </section>
-
+    
     <section id="descargas">
         <h2>Recursos y Descargas</h2>
         <ul>
